--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Torshi</title>
+    <link rel="icon" type="image/png" href="/static/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/static/favicon-16x16.png" sizes="16x16" />
+    <link rel="stylesheet" type="text/css" href="/static/css/print.css" media="print" />
+
+    <script type="text/javascript" src="/static/featuresdb.js" charset="utf-8"></script>
   </head>
   <body>
     <div id="app"></div>
